array.island.Island.scala.error
Compilation error:
Island:6: error: identifier expected but integer literal found.
  while(num != [0]*num.size) {
                ^Island:22: error: ']' expected but '}' found.
} 
^Island:6: error: type application is not allowed for postfix operators
  while(num != [0]*num.size) {
            ^